<resources>
    <string name="app_name">Vocab Builder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="menu_dictionary">Dictionary</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_progress">Progress</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_profile">My Profile</string>
    <string name="edit">Edit Image</string>
    <string name="delete">Delete Image</string>
    <string name="search">Search</string>
    <string name="phone_number">Phone Number</string>
    <string name="verification_code">Verification Code</string>
    <string name="forgot_password">Forgot Password?</string>

    <string name="str1">
    <ul>
        <li><big><p style="color:black">Learn At Your Own Pace</p></big></li>
        <li><big><p style="color:black">Track your Learning Progress</p></big></li>
        <li><big><p style="color:black">See Words Marked As Practised According To Date</p></big></li>
        <li><big><p style="color:black">Learn Word Of The Day</p></big></li>
        <li><big><p style="color:black">Save favourite Words</p></big></li>
    </ul>
    </string>
</resources>