<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@id/nav_dictionary"
            android:icon="@drawable/ic_baseline_library_books_24"
            android:title="@string/menu_dictionary" />
        <item
            android:id="@id/nav_fav"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/menu_favourites" />
        <item
            android:id="@id/nav_progress"
            android:icon="@drawable/ic_baseline_pie_chart_24"
            android:title="@string/menu_progress" />
        <item
            android:id="@id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_profile" />
<!--        <item-->
<!--            android:id="@id/nav_settings"-->
<!--            android:icon="@drawable/ic_baseline_settings_24"-->
<!--            android:title="@string/menu_settings" />-->
        <item
            android:id="@id/nav_about"
            android:icon="@drawable/ic_baseline_account_box_24"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/logout" />

    </group>
</menu>