<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:scrollbarSize="0dp"
    android:scrollbarThumbVertical="@android:color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textAlignment="center"
        android:paddingVertical="@dimen/activity_vertical_margin"
        android:paddingTop="16dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:text="Please sign in to continue with app"
        android:textAlignment="center"
        android:textSize="20sp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="260dp"
        android:text="Or Sign in with email"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:hint="@string/email_address"
        android:layout_centerHorizontal="true"
        android:drawableStart="@drawable/ic_outline_email_24"
        android:drawablePadding="10dp"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:drawableStart="@drawable/ic_outline_lock_24"
        android:drawablePadding="10dp"
        android:maxLines="1"/>

    <Button
        android:id="@+id/signin_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign In"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="470dp"
        android:background="@drawable/custom_button"
        android:textColor="@color/white"
        android:textAllCaps="true"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Don't have an account?"
            android:layout_marginTop="540dp"/>

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Sign UP"
            android:layout_marginTop="540dp"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:contextClickable="true"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="610dp"
        android:layout_centerHorizontal="true"
        android:paddingBottom="30dp"
        android:visibility="invisible"/>
</RelativeLayout>
</ScrollView>