<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:scrollbarSize="0dp"
    android:scrollbarThumbVertical="@android:color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/appName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="50sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textAlignment="center"
            android:paddingVertical="@dimen/activity_vertical_margin"
            android:paddingTop="16dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:text="Please sign in to continue with app"
            android:textAlignment="center"
            android:textSize="20sp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="190dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="260dp"
                android:text="Or Sign in with Phone"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:paddingLeft="50dp"/>

            <ImageButton
                android:id="@+id/signin_phone"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_baseline_phone_android_24"
                android:layout_marginTop="260dp" />

        </LinearLayout>

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="First Name"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="330dp"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="10dp"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Last Name"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="400dp"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="10dp"
            android:maxLines="1"/>


        <EditText
            android:id="@+id/signin_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="470dp"
            android:hint="@string/email_address"
            android:layout_centerHorizontal="true"
            android:drawableStart="@drawable/ic_outline_email_24"
            android:drawablePadding="10dp"
            android:maxLines="1"/>

<!--        <EditText-->
<!--            android:id="@+id/signin_phone"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="540dp"-->
<!--            android:hint="@string/phone_number"-->
<!--            android:inputType="phone"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:drawableStart="@drawable/ic_baseline_phone_24"-->
<!--            android:drawablePadding="10dp"-->
<!--            android:maxLines="1"/>-->

        <EditText
            android:id="@+id/signin_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="540dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_centerHorizontal="true"
            android:drawableStart="@drawable/ic_outline_lock_24"
            android:drawablePadding="10dp"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="610dp"
            android:hint="@string/confirm_password"
            android:layout_centerHorizontal="true"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_outline_lock_24"
            android:drawablePadding="10dp"
            android:maxLines="1"/>


        <Button
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="680dp"
            android:background="@drawable/custom_button"
            android:textColor="@color/white"
            android:textAllCaps="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Already have an account?"
                android:layout_marginTop="750dp"/>

            <TextView
                android:id="@+id/signin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Sign IN"
                android:layout_marginTop="750dp"
                android:textStyle="bold"
                android:paddingLeft="10dp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/signin_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="800dp"
            android:layout_centerHorizontal="true"
            android:paddingBottom="30dp"
            android:visibility="invisible"/>
    </RelativeLayout>
</ScrollView>


